a whole bunch of flask
operational flask with mongo db, with analysis read account integrated in app.py

--- a/docs/flaskapp/templates/index.html
+++ b/docs/flaskapp/templates/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="../../flaskapp/static/logic.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <link rel="icon" sizes="96x96" href="./img/airport.png">
 </head>
 <body>
