--- a/docs/flaskapp/templates/index.html
+++ b/docs/flaskapp/templates/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Flight Delay Dashboard</title>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- D3 JavaScript -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="./static/logic.js"></script>
+    <script src="./static/ryan_logic.js"></script>
     <!-- Our CSS -->
     <link rel="stylesheet" type="text/css" href="./static/styles.css">
       <!-- Your JavaScript files -->
-    <script type="text/javascript" src="./static/logic.js"></script>
       <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="../../flaskapp/static/logic.js"></script>
+
     
 
     <link rel="icon" sizes="96x96" href="./img/airport.png">
@@ -58,15 +60,14 @@
     <div class="bottom-bar">
         <h3> Charts </h3>
         <!-- Add charts or other content for the bottom bar here -->
-        <nav>
-            <ul>
-                <li><a href="#">Chart 1</a>
-                <li><a href="#">Chart 2</a>
-                <li><a href="#">Chart 3</a>
-                <li><a href="#">Chart 4</a>
-                
-            </ul>
-        </nav>
+        <table>
+                <tr>
+                    <td id="bar"></td>
+                    <td id="pie"></td>
+                    <td id="heatmap"></td>
+                    <td id="doublebar"></td>
+                </tr>
+        </table>
     </div>
 </body>
 </html>
