--- a/docs/flaskapp/templates/index.html
+++ b/docs/flaskapp/templates/index.html
@@ -8,7 +8,7 @@
     <!-- D3 JavaScript -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="./static/logic.js"></script>
-    <script src="./static/ryan_logic.js"></script>
+    <script src="./static/best_ryans_logic.js"></script>
     <!-- Our CSS -->
     <link rel="stylesheet" type="text/css" href="./static/styles.css">
       <!-- Your JavaScript files -->
