--- a/docs/static/styles.css
+++ b/docs/static/styles.css
@@ -75,20 +75,32 @@ nav ul li ul li a:hover {
 
 .chartbox {
   background-color: rgba(255, 255, 255, 0.8);
-  display: flex;
-  flex-wrap: wrap; /* Allow charts to wrap to the next row */
-  justify-content: center; /* Center the charts horizontally */
-  align-items: center; /* Center the charts vertically */
+  display: table;
+  width: 100%;
   padding: 20px;
   z-index: 2;
   text-align: center;
 }
 
-.chartbox td {
-  flex: 1 1 50%; /* Each chart takes up 50% width */
-  padding: 10px; /* Add padding around each chart */
+.chartbox div {
+  display: table-cell;
+  width: 50%;
+  padding: 10px;
+  max-width: 600px;
+  max-height: 100px;
 }
 
+/* Media query for small screens */
+@media (max-width: 600px) {
+  .chartbox div {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    max-height: 400px;
+  }
+}
+
+  
 
 .header {
     background-color: #3D4D6E;
@@ -103,18 +115,17 @@ nav ul li ul li a:hover {
 }
 
 .left-column {
-    width: 30%;
+    width: 20%;
 }
 
 .right-column {
-    width: 70%;
+    width: 80%;
 }
 
 .bottom-bar {
     background-color: #3D4D6E;
     color: #FFFFFF;
     padding: 10px;
-    height: 500px;
 }
 
 #map { height: 50vh; }
