--- a/docs/static/styles.css
+++ b/docs/static/styles.css
@@ -128,7 +128,7 @@ nav ul li ul li a:hover {
     padding: 10px;
 }
 
-#map { height: 95vh; }
+#map { height: 50vh; }
 .map-container {
   display: grid;
   background-color: #f5f5f5;
@@ -179,4 +179,9 @@ nav ul li ul li a:hover {
 
 .library-container a {
   margin-right: 10px;
+}
+
+#airline-logo {
+  width: 100px;
+  height: 100px;
 }
