--- a/docs/static/styles.css
+++ b/docs/static/styles.css
@@ -184,4 +184,7 @@ nav ul li ul li a:hover {
 #airline-logo {
   width: 100px;
   height: 100px;
+  object-fit: contain;
+  padding: 20px;
+  display: block;
 }
