--- a/docs/flaskapp/static/styles.css
+++ b/docs/flaskapp/static/styles.css
@@ -16,6 +16,14 @@ nav {
   background-color: #fff;
 }
 
+.nav-container2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%; 
+}
+
+
 nav p {
   font-family: arial;
   color: #060606;
@@ -73,9 +81,34 @@ nav ul li ul li a:hover {
   background-color: #3D4D6E
 }
 
+.chartbox {
+  background-color: rgba(255, 255, 255, 0.8);
+  display: table;
+  width: 100%;
+  padding: 20px;
+  z-index: 2;
+  text-align: center;
+}
 
+.chartbox div {
+  display: table-cell;
+  width: 50%;
+  padding: 10px;
+  max-width: 600px;
+  max-height: 100px;
+}
 
+/* Media query for small screens */
+@media (max-width: 600px) {
+  .chartbox div {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    max-height: 400px;
+  }
+}
 
+  
 
 .header {
     background-color: #3D4D6E;
@@ -90,26 +123,25 @@ nav ul li ul li a:hover {
 }
 
 .left-column {
-    width: 30%;
+    width: 20%;
 }
 
 .right-column {
-    width: 70%;
+    width: 80%;
 }
 
 .bottom-bar {
     background-color: #3D4D6E;
     color: #FFFFFF;
     padding: 10px;
-    height: 300px;
 }
 
-#map { height: 50vh; }
+#map { height: 80vh; }
 .map-container {
   display: grid;
   background-color: #f5f5f5;
   position: relative;
-  z-index: 2;
+  z-index: 0;
 }
 
 
@@ -155,4 +187,18 @@ nav ul li ul li a:hover {
 
 .library-container a {
   margin-right: 10px;
+}
+
+#airline-logo {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+  padding: 20px;
+  display: block;
+}
+
+.hexbin {
+  fill: #3D4D6E;
+  stroke: #FFFFFF;
+  stroke-width: 0.65;
 }
